<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_700"
        android:textSize="30sp"
        android:text="@string/rezultat"

        />
    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="389dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="214dp"
        android:layout_marginBottom="0dp">

        <Button
            android:id="@+id/digitSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            android:text="@string/digitSix"
            app:layout_column="2"
            app:layout_gravity="center"
            app:layout_row="1" />

        <Button
            android:id="@+id/digitThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            android:text="@string/digitThree"
            app:layout_column="2"
            app:layout_gravity="center"
            app:layout_row="2" />

        <Button
            android:id="@+id/digitTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            android:text="@string/digitTwo"
            app:layout_column="1"
            app:layout_gravity="center"
            app:layout_row="2" />

        <Button
            android:id="@+id/digitFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            android:text="@string/digitFive"
            app:layout_column="1"
            app:layout_gravity="center"
            app:layout_row="1" />

        <Button
            android:id="@+id/digitFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            android:text="@string/digitFour"
            app:layout_column="0"
            app:layout_gravity="center"
            app:layout_row="1" />

        <Button
            android:id="@+id/digitNine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            android:text="@string/digitNine"
            app:layout_column="2"
            app:layout_gravity="center"
            app:layout_row="0" />

        <Button
            android:id="@+id/digitEight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            android:text="@string/digitEight"
            app:layout_column="1"
            app:layout_gravity="center"
            app:layout_row="0" />

        <Button
            android:id="@+id/digitSeven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            android:text="@string/digitSeven"
            app:layout_column="0"
            app:layout_gravity="center"
            app:layout_row="0" />

        <Button
            android:id="@+id/digitOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            android:text="@string/digitOne"
            app:layout_column="0"
            app:layout_gravity="center"
            app:layout_row="2" />

        <Button
            android:id="@+id/digitZero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            android:text="@string/digitZero"
            app:layout_column="0"
            app:layout_gravity="center|top"
            app:layout_row="3" />

        <Button
            android:id="@+id/digitDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            android:text="@string/digitDecimal"
            app:layout_column="1"
            app:layout_gravity="center|top"
            app:layout_row="3" />

        <Button
            android:id="@+id/actPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            android:text="@string/actPlus"
            app:layout_column="0"
            app:layout_gravity="bottom|center"
            app:layout_row="3" />

        <Button
            android:id="@+id/actMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            android:text="@string/actMinus"
            app:layout_column="1"
            app:layout_gravity="bottom|center"
            app:layout_row="3" />

        <Button
            android:id="@+id/enter"
            android:layout_width="wrap_content"
            android:layout_height="190dp"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            android:text="@string/enter"
            app:layout_column="2"
            app:layout_gravity="center"
            app:layout_row="3" />

        <Button
            android:id="@+id/actDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            android:text="@string/actDiv"
            app:layout_column="0"
            app:layout_gravity="center"
            app:layout_row="3" />

        <Button
            android:id="@+id/actMultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            android:text="@string/actMultiply"
            app:layout_column="1"
            app:layout_gravity="center" />

        <Button
            android:id="@+id/actBracket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            android:text="@string/brackets"
            app:layout_column="0"
            app:layout_gravity="center"
            app:layout_row="5"
            tools:text="( )" />

        <Button
            android:id="@+id/actClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            android:text="@string/cancel"
            app:layout_column="1" />

        <Button
            android:id="@+id/actInvert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:insetLeft="4dp"
            android:insetRight="4dp"
            android:text="@string/invert"
            app:layout_column="2"
            app:layout_gravity="center" />

    </androidx.gridlayout.widget.GridLayout>
</RelativeLayout>